--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
   height: 150;
 }
 
-.navigation-bar ul {
-  padding: 0px;
-  margin: 0px;  
+.navigation-bar {
+  width: 100%;
+  height: 90px;
 }
+
+
