--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 .navigation-bar {
   width: 100%;
-  height: 90px;
-  background-color:#D3D3D3
+  height: 80px;
+  background-color:#F5F5F5
 }
 
 
