--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  min-height:300px;
+  min-height: 300px;
 }
 
 .logo {
@@ -15,7 +15,7 @@ body {
 
 .navigation-bar {
   width: 100%;
-  height: 80px;
+  float: left;
   background-color:#F5F5F5
 }
 
