--- a/style.css
+++ b/style.css
@@ -13,16 +13,15 @@ body {
   height: 100%;
 }
 
-.menu {
-}
-
-.menu li {
+.navigation-bar li {
   display: inline;
 }
 
 .navigation-bar {
   width: 100%;
   float: left;
+  padding: 8;
+  margin: 0;
   background-color:#F5F5F5
 }
 
