--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body {
 .navigation-bar {
   width: 100%;
   float: left;
+  display: flex;
+  justify-content: center;
   padding: 8;
   margin: 0;
   background-color:#F5F5F5
